[metadata]
name = daq_assettools
version = 1.0.0
url = https://github.com/DUNE-DAQ/daq-assettools
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = daq_assettools
package_dir = =python
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.entry_points]
console_scripts = 
    assets-list = daq_assettools.tools:get_assets
    assets-update = daq_assettools.tools:update_assets
    assets-retire = daq_assettools.tools:retire_assets
    assets-add = daq_assettools.tools:add_assets
